providers/aws/using-modules/modules/ec2/sg.tf
resource "aws_security_group" "tutorial_sg" {
  name        = "tutorial-allow-${terraform.workspace}-sg"
  description = "Inboung security group"
  vpc_id      = data.aws_vpc.tutorial.id

  # SSH Protocol
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP Protocol
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTPS Protocol
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }

  tags = "${merge(var.tags["values"])}"
}
